crates/formats/src/opf/snapshots/bb_formats__opf__regression_tests__isbn13_classified_correctly.snap
---
source: crates/formats/src/opf/regression_tests.rs
expression: meta
---
ExtractedMetadata {
    title: Some(
        "Test",
    ),
    authors: None,
    description: None,
    publisher: None,
    published_date: None,
    language: None,
    identifiers: Some(
        [
            ExtractedIdentifier {
                identifier_type: Isbn13,
                value: "9780441013593",
            },
        ],
    ),
    series_name: None,
    series_number: None,
    genres: [],
    tags: [],
    page_count: None,
    has_spinnaker_metadata: false,
    cover_bytes: None,
}
