crates/formats/src/opf/snapshots/bb_formats__opf__regression_tests__opf2_plain_year_date.snap
---
source: crates/formats/src/opf/regression_tests.rs
expression: meta
---
ExtractedMetadata {
    title: Some(
        "Dune",
    ),
    authors: Some(
        [
            ExtractedAuthor {
                name: "Frank Herbert",
                role: Some(
                    Author,
                ),
                sort_order: 0,
            },
        ],
    ),
    description: None,
    publisher: None,
    published_date: Some(
        1965,
    ),
    language: Some(
        "en",
    ),
    identifiers: Some(
        [
            ExtractedIdentifier {
                identifier_type: Isbn13,
                value: "9780441013593",
            },
        ],
    ),
    series_name: None,
    series_number: None,
    genres: [],
    tags: [],
    cover_bytes: None,
}
